fix clipping de las listas en contenidos.js aplicando height auto y eliminando max height

--- a/index.css
+++ b/index.css
@@ -335,8 +335,7 @@ a {
     overflow-y: hidden;
     display: none;
     flex-direction: column;
-    height: fit-content;
-    max-height: 500px;
+    height: auto;
     font-size: 1em;
     justify-content: center;
     align-items: center;
